# ordinal-rs

./: .cspell.json  .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md  criterion.toml  shell.nix
.github/workflows/: ci.yml  release.yml
.helix/: languages.toml
benches/: ordinal.rs
docs/: style-svg.xslt
examples/: date.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: docgen.rs  main.rs
