[package]
name = "ordinal-trait"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
license = "MPL-2.0"
description = "Format numbers as ordinals efficiently."
repository = "https://github.com/heaths/ordinal-rs"
keywords = ["number", "ordinal"]
categories = ["no-std", "value-formatting"]

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "ordinal"
harness = false
required-features = ["std"]
