[package]
name = "ordinal-trait"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
license = "MIT"
description = "Format numbers as ordinals efficiently."
repository = "https://github.com/heaths/ordinal-rs"
keywords = ["number", "ordinal"]
categories = ["no-std", "value-formatting"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dev-dependencies]
chrono = { version = "0.4.39", default-features = false, features = [
  "alloc",
  "clock",
] }
criterion = "0.5.1"
num-format = "0.4.4"
num-ordinal = "0.2.0"
ordinal = "0.3.2"
ordinal-type = "0.3.0"

[lib]
bench = false

[[bench]]
name = "ordinal"
harness = false
required-features = ["std"]
